k8s/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: kubernetes.local
      http:
        paths:
          - path: /api/service1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service1
                port:
                  number: 8080
          - path: /api/service2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service2
                port:
                  number: 8080
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
